3. Прокачай Java. Завершаем проект "Экзамен"[#180964]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".add.AddActivity"></activity>
+        <activity android:name=".pass.PassActivity"></activity>
     </application>
 </manifest>
